worked on home-page component 06-03-2024

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="myfont-Barlowfamily font-semibold body-font">
+<header class="myfont-Helveticafamily font-semibold body-font">
     <div class=" bg-neutral-100 text-xs hidden container mx-auto md:flex flex-wrap py-2 px-10 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <img src="../../../assets/icons/jumpman.png"  class="w-10 h-10 text-white p-2 rounded-full">
