--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet />
+
+<div class="w-full">
+    <app-header></app-header>
+    <router-outlet />
+    <app-footer></app-footer>
+</div>
