--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="h-screen py-8">
     <div class="container mx-auto px-4">
-        <h1 class="text-2xl font-semibold mb-4">Shopping Cart</h1>
+        <h1 class="text-2xl font-semibold mb-4">Bag</h1>
         <div class="flex flex-col md:flex-row gap-4">
             <div class="md:w-3/4">
                 <div class="bg-white rounded-lg shadow-md p-6 mb-4">
@@ -56,7 +56,8 @@
                         <span class="font-semibold">Total</span>
                         <span class="font-semibold">$21.98</span>
                     </div>
-                    <button class="bg-blue-500 text-white py-2 px-4 rounded-lg mt-4 w-full">Checkout</button>
+                    <button class=" bg-slate-800 text-white py-2 px-4 rounded-lg mt-4 w-full">Checkout</button>
+                    <button class="rounded-full text-white py-1 px-4 text-center">Checkout</button>
                 </div>
             </div>
         </div>
