created sign-up component

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
         <a class="mr-5 hover:text-gray-900">Find a Store <span>|</span> </a>
         <a class="mr-5 hover:text-gray-900">Help <span>|</span> </a>
         <a class="mr-5 hover:text-gray-900">Join Us <span>|</span> </a>
-        <a class="mr-5 hover:text-gray-900">Sign In</a>
+        <a class="mr-5 hover:text-gray-900"  [routerLink]="[ '/sign-up']">Sign In</a>
       </nav>
     </div>
 
