--- a/src/app/container/home-page/home-page.component.html
+++ b/src/app/container/home-page/home-page.component.html
@@ -49,21 +49,32 @@
     </div>
 </section>
 
-<section class="w-11/12 mx-auto h-2/3 my-10">
+
+<table class="w-11/12 m-auto">
     <h1 class="text-2xl my-10">Just In</h1>
-    <div class="mx-auto grid grid-rows-1 grid-cols-2">
-        <div class="z-40">
-            <img src="../../../assets/images/offer.svg"/>
-        </div>
-        <div class="bg-zinc-100 rounded-lg -ml-20"><!--App Drop Starts-->
-            <div class="flex flex-col items-center font-extrabold text-8xl barlowFont w-6/12 mx-auto">
-                <img src="../../../assets/images/Logo_NIKE.svg" class="w-[60%] drop-shadow-lg pt-10"/>
-                <p>APP</p><p>DROP</p>
+    <tr class="w-full">
+        <td class="w-2/4">
+            <img src="../../../assets/images/offer.svg" class="py-0 md:ml-24 md:scale-x-110"/>
+        </td>
+        <td class="w-2/4 bg-neutral-100 shadow-md rounded-xl">
+            <div class="flex flex-col items-center gap-y-0 font-extrabold barlow-fontfamily w-2/2">
+                <img src="../../../assets/images/Logo_NIKE.svg" class="w-fit md:h-32 size-8 drop-shadow-lg"/><!-- md:h-32 h-4-->
+                <p class="text-center md:text-7xl text-5xl">APP<br>DROP</p>
+                
+                <img [src]="currentImg" class="w-fit md:h-64 h-20"/>
+                <button class="md:w-24 w-20 rounded-full text-white py-1 px-4 text-center bg-slate-800 lg:text-xl md:text-base text-xs">Shop</button>
             </div>
-            <div class="h-72 w-[60%]  mx-auto">
-                <img [src]="currentImg" class=" duration-700 ease-in-out h-[100%] w-[100%] z-10 drop-shadow-lg" />
-                <button class="rounded-full text-white py-1 px-4 text-center bg-slate-800 md:text-base text-sm">Shop</button>
-            </div>
-        </div><!--App Drop Ends-->
+        </td>
+    </tr>
+</table>
+
+<section class="w-12/12 h-[10%] text-center my-10">
+    <p>Nike Dynamo 2 EasyOn</p>
+    <p class="font-extrabold md:text-7xl text-5xl barlow-fontfamily">{{'Nike Easyon and go' | uppercase}}</p>
+    <p class="my-6 md:text-base text-sm">Nike EasyOn-Designed to put on and get going.</p>
+    <div class="flex justify-center items-center gap-4 font-semibold">
+        <button class="md:w-24 w-20 rounded-full text-white py-1 px-4 text-center bg-slate-800 lg:text-xl md:text-base text-xs">Shop</button>
     </div>
 </section>
+
+<app-home-carousel></app-home-carousel>
