making sign-up more robust 17-03-2024

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -26,7 +26,7 @@
         <div>
           <span class="p-input-icon-left">
               <i class="pi pi-search"></i>
-              <input type="text" pInputText placeholder="Search" class="py-2 rounded-full text-center bg-neutral-100"/> <!-- [(ngModel)]="value"-->
+              <input type="text" pInputText placeholder="Search" class="mx-1 py-2 rounded-full text-center bg-neutral-100 shadow-sm"/> <!-- [(ngModel)]="value"-->
           </span>
         </div>
         <img [src]="Nav_fav_imgs" (mouseover)="Nav_fav_imgs = '../../../assets/icons/redfavorite.svg'" (mouseout)="Nav_fav_imgs = '../../../assets/icons/favorite.svg'"  class="transition-opacity w-10 h-10 inline-block text-white p-2 rounded-full">
