--- a/src/app/Credential/sign-up/sign-up.component.html
+++ b/src/app/Credential/sign-up/sign-up.component.html
@@ -1,51 +1,83 @@
 <section class="text-gray-600 body-font">
-    <form #sign_up_form="ngForm" (ngSubmit)="signUpFormFunction(sign_up_form)" class="container px-5 py-24 mx-auto flex flex-wrap items-center">
-      <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
-        <h1 class="title-font font-medium text-3xl text-gray-900">The journey begins with the perfect pair.</h1>
-        <p class="leading-relaxed mt-4">Wear a pair of our sneakers, and you will fall in love with them instantly Because our footwear believes in the comfort of your feet.</p>
+  <p-toast [breakpoints]="{'920px': {width: '100%', right: '0', left: '0'}}"></p-toast>
+  <form
+    #sign_up_form="ngForm"
+    (ngSubmit)="signUpFormFunction(sign_up_form)"
+    class="container px-5 py-24 mx-auto flex flex-wrap items-center"
+  >
+    <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
+      <h1 class="title-font font-medium text-3xl text-gray-900">
+        The journey begins with the perfect pair.
+      </h1>
+      <p class="leading-relaxed mt-4">
+        Wear a pair of our sneakers, and you will fall in love with them
+        instantly Because our footwear believes in the comfort of your feet.
+      </p>
+    </div>
+    <div
+      class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 shadow-lg"
+    >
+      <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign Up</h2>
+      <div class="relative mb-4">
+        <label for="user-name" class="leading-7 text-sm text-gray-600"
+          >User Name</label
+        >
+        <input
+          type="text"
+          id="username"
+          name="username"
+          ngModel
+          #formusername="ngModel"
+          class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+        />
+        @if (formusername.invalid && formusername.touched) {
+        <p class="text-xs text-red-500 mt-3">please write your name</p>
+        }
       </div>
-      <div class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0">
-        <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Sign Up</h2>
-        <div class="relative mb-4">
-            <p-floatLabel>
-                <input
-                 type="text"
-                 id="full-name"
-                 name="full-name"
-                 ngModel
-                 required
-                 #formfullname="ngModel"
-                 class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                <label for="full-name" class="leading-7 text-sm text-gray-600">Full Name</label>
-            </p-floatLabel>
-          @if (formfullname.invalid && formfullname.touched) {
-            <p class="text-xs text-red-500 mt-3">please write your name </p>
-          } 
-        </div>
-        <div class="relative mb-4">
-            <p-floatLabel>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  ngModel
-                  email
-                  required
-                  #formemail="ngModel"
-                   class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-            </p-floatLabel>
-            @if (formemail.invalid && formemail.touched) {
-              <p class="text-xs text-red-500 mt-3">Please enter the valid email.</p>
-            }
-        </div>
-        <button class="text-white bg-slate-700 border-0 py-2 px-8 focus:outline-none hover:bg-slate-900 rounded text-lg" [disabled]="sign_up_form.invalid">Button</button>
-        <p class="text-xs text-gray-500 mt-3">Literally you probably haven't heard of them jean shorts.</p>
+      <div class="relative mb-4">
+        <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          ngModel
+          email
+          #formemail="ngModel"
+          class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+        />
+        @if (formemail.invalid && formemail.touched) {
+        <p class="text-xs text-red-500 mt-3">Please enter the valid email.</p>
+        }
       </div>
-    </form>
-    @if (sign_up_form.valid && sign_up_form.submitted) {
-      <p-blockUI [blocked]="this.blockedDocument()">
-        <p-progressSpinner ariaLabel="loading"></p-progressSpinner>
-      </p-blockUI>
-    }
-  </section>
+
+      <div class="relative mb-4">
+        <label for="password" class="leading-7 text-sm text-gray-600">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          ngModel
+          #formpassword="ngModel"
+          class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+        >
+        @if (formpassword.invalid && formpassword.touched) {
+        <p class="text-xs text-red-500 mt-3">Please enter the password.</p>
+        }
+      </div>
+      <button
+        class="text-white bg-slate-700 border-0 py-2 px-8 focus:outline-none hover:bg-slate-900 rounded text-lg"
+        [disabled]="sign_up_form.invalid"
+      >
+        Sign Up
+      </button>
+      <p class="text-xs text-gray-500 mt-3">
+        Literally you probably haven't heard of them jean shorts.
+      </p>
+    </div>
+  </form>
+  @if (sign_up_form.valid && sign_up_form.submitted) {
+  <p-blockUI [blocked]="this.blockedDocument()">
+    <p-progressSpinner ariaLabel="loading"></p-progressSpinner>
+  </p-blockUI>
+  }
+</section>
