created json file dump for inserting the products in bulk, and displayed them on new arrival screen.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-
-<div class="w-full">
-    <app-header></app-header>
-    <router-outlet />
-    <app-footer></app-footer>
-</div>
+@if (loadAdmin)
+{
+    <app-admin-page></app-admin-page>
+}
+@else {
+    <div class="w-full">
+        <app-header></app-header>
+            <app-main-page></app-main-page>
+            <app-footer></app-footer>
+        </div>
+} 
