worked on header and new arrival filtering

--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,3 +1,7 @@
 .myfont-Helveticafamily{
     font-family: Helvetica;
 }
+:host ::ng-deep .p-megamenu { 
+	font-size: small;
+    background-color: white;
+}
