centralized data by creating a store service and filtered data through it.

--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -20,6 +20,7 @@
   @for (newarrivaldata of newarrivalData; track $index) {
   <div
     class="mx-auto mt-11 w-80 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg"
+    [routerLink]="['main/product-detail']"
   >
     <img
       class="h-48 w-full object-cover object-center"
