--- a/src/app/component/find-store/find-store.component.html
+++ b/src/app/component/find-store/find-store.component.html
@@ -1,1 +1,10 @@
-<p>find-store works!</p>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d112054.91634970493!2d77.19808376914114!3d28.63826860782832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1snike%20store!5e0!3m2!1sen!2sin!4v1715879047483!5m2!1sen!2sin"
+  style="border: 0"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade"
+  width="600"
+  height="600"
+  class="m-auto w-10/12"
+></iframe>
