--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -12,7 +12,7 @@
             </a>
             <a class="ml-3 text-gray-400 hover:text-sky-500">
               
-<i class="pi pi-box" style="font-size: 1.5rem"></i>Netlify
+<i class="pi pi-box" style="font-size: 1.5rem"></i>
             </a>
             <a class="ml-3 text-gray-400 hover:text-blue-500">
               
