--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -34,7 +34,7 @@
 
 <section class=" w-11/12 h-[30%] mx-auto my-10">
     <h1 class="text-2xl my-10">Trending</h1>
-    <video autoplay muted loop playsinline preload="auto">
+    <video [autoplay]="true" [muted]="true" [loop]="true">
         <source src="../../../assets/images/preview.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>      
@@ -69,23 +69,31 @@
     </tr>
 </table>
 
-<table class="w-11/12 m-auto">
-    <h1 class="text-2xl my-10">Just In Updated</h1>
-    <tr class="w-full">
-        <td class="w-2/4">
-            <img src="../../../assets/images/offer.svg" class="py-0 md:ml-24 md:scale-x-110"/><!---->
-        </td>
-        <td class="w-2/4 bg-neutral-100 shadow-md rounded-xl">
-            <div class="flex flex-col items-center gap-y-0 font-extrabold barlow-fontfamily w-2/2">
-                <img src="../../../assets/images/Logo_NIKE.svg" class="w-64 h-32 size-8 drop-shadow-lg"/>
-                <p class="text-center text-5xl md:text-7xl">APP<br>DROP</p>
-                
+
+
+<div class="w-11/12 m-auto grid grid-cols-4 grid-rows-5 gap-0">
+    <h1 class="text-2xl col-span-4">Just In</h1>
+    <div class="col-span-2 row-span-4">
+        <img src="../../../assets/images/offer.svg" class="h-full w-full xs: scale-y-150 lg:scale-y-100"/>
+    </div>
+    <div class="col-span-2 row-span-4 col-start-3  bg-neutral-100 shadow-md rounded-xl">
+        <div class="grid grid-cols-1 auto-rows-min">
+            <div class="bg-red-200 justify-items-center items-center">
+                <img src="../../../assets/images/Logo_NIKE.svg" class="w-fit md:h-16 lg:h-32 size-8 drop-shadow-lg"/>
+            </div>
+            <div class="row-span-1 justify-items-center items-center">
+                <p class="text-center md:text-7xl text-5xl font-extrabold barlow-fontfamily">APP<br>DROP</p>
+            </div>
+            <div class="row-span-2 justify-items-center items-center">
                 <img [src]="currentImg" class="w-fit md:h-64 h-20"/>
+            </div>
+            <div class="bg-pink-200 justify-items-center items-center">
                 <button class="md:w-24 w-20 rounded-full text-white py-1 px-4 text-center bg-slate-800 lg:text-xl md:text-base text-xs">Shop</button>
             </div>
-        </td>
-    </tr>
-</table>
+        </div>
+    </div>
+</div>
+    
 
   
 
